--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
